Update 21-41 EXERCISES OF CORE JAVA.java